--- a/newToDoApp/package.json
+++ b/newToDoApp/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "todo-App.js",
   "scripts": {
-    "start": "nodemon todo-App",
+    "start": "nodemon todo-App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
